# lazy_tg_bot

./: .env.example  README.md  pyproject.toml
lazy_tg_bot/: main.py
tools/: linting.sh  setup.sh  start.sh  tests.sh
